# pyecon

./: .gitignore  README.md  _config.yml  conf.py  index.rst  pyproject.toml  setup.py
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/: conf.py  index.rst  installation.rst  reference.rst  requirements_rtd.txt
doc/auto_examples/: index.rst  plot_randgrid.rst  plot_randgrid_codeobj.pickle  searchindex.bak  searchindex.dir  sg_execution_times.rst
doc/user_guide/: intertemporalmax.rst
tests/: test_pyecon.py
vig/getdatagis/envir/: fs_ecmwf.Rmd
vig/getdatagis/envir/htmlpdfr/: fs_ecmwf.R  fs_ecmwf.html
